[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/kenvector_future_thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/player_small.png" type="Texture" id=2]
[ext_resource path="res://assets/play_button.png" type="Texture" id=3]
[ext_resource path="res://assets/play_button_h.png" type="Texture" id=4]
[ext_resource path="res://ui/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/glassPanel_200.png" type="Texture" id=6]
[ext_resource path="res://assets/shield_gold.png" type="Texture" id=7]
[ext_resource path="res://assets/barHorizontal_green_mid 200.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 984.0
margin_bottom = 72.0

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_right = 410.0
margin_bottom = 72.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 444.0
margin_bottom = 72.0
texture = ExtResource( 7 )

[node name="ShieldBar" type="TextureProgress" parent="MarginContainer/HBoxContainer"]
margin_left = 448.0
margin_right = 858.0
margin_bottom = 72.0
size_flags_horizontal = 3
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 8 )

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 862.0
margin_right = 984.0
margin_bottom = 72.0

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_right = 38.0
margin_bottom = 72.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 72.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
margin_left = 84.0
margin_right = 122.0
margin_bottom = 72.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -32.5
margin_right = 124.5
margin_bottom = 32.5
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
